--- a/web/css/style.css
+++ b/web/css/style.css
@@ -65,20 +65,26 @@ header {
 #sidebar li{
     text-align: right;
 }
-
+.lead{
+     color: black;
+     font-weight: 600;
+     
+}
+/*
 #sidebar a {
     color: black;
     text-decoration: none;
     padding: 0 10px 5px;
     font-size: 1.8rem;
-    font-weight: 900;
-    line-height: 1.8;
+    font-weight: 600;
+    line-height: 1.4;
     text-shadow: 3px 1px 0 gold;
 }
-
+*/
 #sidebar a:hover {
     color: black;
     transition: .2s;
+    font-weight: 600;
     text-shadow: 3px 1px 0 white;
     background-color: gold;
 
