- Connection to Web DB in ConnectionDB - Delete Bootstrap folder(css error) - add Bootstrap link in head.jsp - some css changes (class .time) - Time -> String in ArriveesDAO, DepartsDAO for showing them in HH:mm format (could have some problems in future!)

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -109,15 +109,19 @@ header {
 
 #vols td{
     font-size: 12px;
-    padding: 5px 2px;
-
+    padding: 8px 2px;
+    text-align: center;
+    vertical-align: middle;
 }
+
 #vols th{
-
-    padding: 8px 2px ;
-
+    padding: 10px 2px ;
 }
 
+.time{
+    font-size: 18px!important;
+    font-weight: 600!important;
+}
 
 
 
