--- a/web/css/style.css
+++ b/web/css/style.css
@@ -79,7 +79,7 @@ input[type="text"]{
     -moz-box-shadow: none;
     box-shadow: none;
     
-    color:transparent;
+    color: rgba(0, 0, 0, 0.9);;
     cursor:default;
 }
 
